[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
